--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         </div>
     </header>
 
+<!--    <svg class="" width="" height="">
+      <use href=""></use>
+    </svg>-->
+
+
     <!--Section1 button-->
     <main class="main">
         <section class="hero">
@@ -54,21 +59,42 @@
                 <h2 class="visually-hidden">Values</h2>
                 <ul class="section-list">
                     <li class="section-item">
+                     <div class="icon-section-container">
+                      <svg class="expertise-icon" width="64" height="64">
+        <symbol id="icon-antenna" viewBox="0 0 32 32">
+                       <use href="./images/icons.svg.svg#icon-antenna"></use>
+                      </svg>
+                     </div>
                         <h3 class="section-item-title">Strategy</h3>
                         <p class="section-text">Our goal is to identify the business problem to walk away with the
                             perfect and creative solution.</p>
                     </li>
                     <li class="section-item">
+                        <div class="icon-section-container">
+                            <svg class="expertise-icon" width="64" height="64">
+                                <use href="./images/icons.svg.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="section-item-title">Punctuality</h3>
                         <p class="section-text">Bring the key message to the brand's audience for the best price within
                             the shortest possible time.</p>
                     </li>
                     <li class="section-item">
+                        <div class="icon-section-container">
+                            <svg class="expertise-icon" width="64" height="64">
+                                <use href="./images/icons.svg.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="section-item-title">Diligence</h3>
                         <p class="section-text">Research and confirm brands that present the strongest digital growth
                             opportunities and minimize risk.</p>
                     </li>
                     <li class="section-item">
+                        <div class="icon-section-container">
+                            <svg class="expertise-icon" width="64" height="64">
+                                <use href="./images/icons.svg.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="section-item-title">Technologies</h3>
                         <p class="section-text">Design practice focused on digital experiences. We bring forth a deep
                             passion for problem-solving.</p>
@@ -82,25 +108,122 @@
                 <div class="container">
                     <h2 class="team-title">Our Team</h2>
                     <ul class="team-list">
-                        <li class="team-item">
+                        <ul class="team-item">
                             <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260">
                             <div class="teams">
                             <h3 class="team-subtitle">Mark Guerrero</h3>
                             <p class="team-text">Product Designer</p>
                             </div>
+                            <ul class="soc-icon-list"></ul>
+<li class="soc-icon-team">
+    <a href="https://instagram.com" class="soc-icon">
+        <svg class="media-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-instagram"></use>
+        </svg>
+    </a>
+    </li>
+    <li class="soc-icon-team">
+        <a href="https://twitter.com" class="soc-icon">
+            <svg class="media-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+        </a>
+    </li>
+    <li class="soc-icon-team">
+        <a href="https://facebook.com" class="soc-icon">
+            <svg class="media-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+        </a>
+    </li>
+    <li class="soc-icon-team">
+        <a href="https://linkedin.com" class="soc-icon">
+            <svg class="media-icon" width="16" height="16">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+        </a>
+</li>
+</ul>
+ 
                         </li>
                         <li class="team-item">
                             <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260">
                             <div class="teams">
                             <h3 class="team-subtitle">Tom Ford</h3>
                             <p class="team-text">Frontend Developer</p>
+<ul class="soc-icon-list"></ul>
+<li class="soc-icon-team">
+    <a href="https://instagram.com" class="soc-icon">
+        <svg class="media-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-instagram"></use>
+        </svg>
+    </a>
+</li>
+<li class="soc-icon-team">
+    <a href="https://twitter.com" class="soc-icon">
+        <svg class="media-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-twitter"></use>
+        </svg>
+    </a>
+</li>
+<li class="soc-icon-team">
+    <a href="https://facebook.com" class="soc-icon">
+        <svg class="media-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-facebook"></use>
+        </svg>
+    </a>
+</li>
+<li class="soc-icon-team">
+    <a href="https://linkedin.com" class="soc-icon">
+        <svg class="media-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-linkedin"></use>
+        </svg>
+    </a>
+</li>
+</ul>
+
+
+
+
                             </div>
                         </li>
                         <li class="team-item">
                             <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260">
                             <div class="teams">
                             <h3 class="team-subtitle">Camila Garcia</h3>
-                            <p class="team-text">Marketing</p>
+<ul class="soc-icon-list"></ul>
+<li class="soc-icon-team">
+    <a href="https://instagram.com" class="soc-icon">
+        <svg class="media-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-instagram"></use>
+        </svg>
+    </a>
+</li>
+<li class="soc-icon-team">
+    <a href="https://twitter.com" class="soc-icon">
+        <svg class="media-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-twitter"></use>
+        </svg>
+    </a>
+</li>
+<li class="soc-icon-team">
+    <a href="https://facebook.com" class="soc-icon">
+        <svg class="media-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-facebook"></use>
+        </svg>
+    </a>
+</li>
+<li class="soc-icon-team">
+    <a href="https://linkedin.com" class="soc-icon">
+        <svg class="media-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-linkedin"></use>
+        </svg>
+    </a>
+</li>
+</ul>                            <p class="team-text">Marketing</p>
+
+
+                        
                             </div>
                         </li>
                         <li class="team-item">
@@ -108,6 +231,39 @@
                             <div class="teams">
                             <h3 class="team-subtitle">Daniel Wilson</h3>
                             <p class="team-text">UI Designer</p>
+<ul class="soc-icon-list"></ul>
+<li class="soc-icon-team">
+    <a href="https://instagram.com" class="soc-icon">
+        <svg class="media-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-instagram"></use>
+        </svg>
+    </a>
+</li>
+<li class="soc-icon-team">
+    <a href="https://twitter.com" class="soc-icon">
+        <svg class="media-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-twitter"></use>
+        </svg>
+    </a>
+</li>
+<li class="soc-icon-team">
+    <a href="https://facebook.com" class="soc-icon">
+        <svg class="media-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-facebook"></use>
+        </svg>
+    </a>
+</li>
+<li class="soc-icon-team">
+    <a href="https://linkedin.com" class="soc-icon">
+        <svg class="media-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-linkedin"></use>
+        </svg>
+    </a>
+</li>
+</ul>
+
+
+                        
                             </div>
                         </li>
                     </ul>
@@ -173,6 +329,42 @@
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
                 growth solutions.</p>
         </div>
+    <div class="footer-social-contact">
+        <p class="footer-list-title">Social media</p>
+        <ul class="footer-icon-list">
+            <li class="footer-social-item">
+                <a class="footer-social-link" href="https://www.instagram.com/" target="_blank">
+                    <svg class="footer-media-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="footer-social-item">
+                <a class="footer-social-link" href="https://twitter.com/" target="_blank">
+                    <svg class="footer-media-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="footer-social-item">
+                <a class="footer-social-link" href="https://www.facebook.com/" target="_blank">
+                    <svg class="footer-media-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook "></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="footer-social-item">
+                <a class="footer-social-link" href="https://ua.linkedin.com/" target="_blank">
+                    <svg class="footer-media-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
+
+
+
     </footer>
 </body>
 </html>
