--- a/index.html
+++ b/index.html
@@ -39,10 +39,6 @@
         </div>
     </header>
 
-<!--    <svg class="" width="" height="">
-      <use href=""></use>
-    </svg>-->
-
 
     <!--Section1 button-->
     <main class="main">
@@ -62,7 +58,7 @@
                      <div class="icon-section-container">
                       <svg class="expertise-icon" width="64" height="64">
         <symbol id="icon-antenna" viewBox="0 0 32 32">
-                       <use href="./images/icons.svg.svg#icon-antenna"></use>
+                       <use href="./images/icons.svg#icon-antenna"></use>
                       </svg>
                      </div>
                         <h3 class="section-item-title">Strategy</h3>
@@ -72,7 +68,7 @@
                     <li class="section-item">
                         <div class="icon-section-container">
                             <svg class="expertise-icon" width="64" height="64">
-                                <use href="./images/icons.svg.svg#icon-clock"></use>
+                                <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
                         <h3 class="section-item-title">Punctuality</h3>
@@ -82,7 +78,7 @@
                     <li class="section-item">
                         <div class="icon-section-container">
                             <svg class="expertise-icon" width="64" height="64">
-                                <use href="./images/icons.svg.svg#icon-diagram"></use>
+                                <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
                         <h3 class="section-item-title">Diligence</h3>
@@ -92,7 +88,7 @@
                     <li class="section-item">
                         <div class="icon-section-container">
                             <svg class="expertise-icon" width="64" height="64">
-                                <use href="./images/icons.svg.svg#icon-astronaut"></use>
+                                <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
                         <h3 class="section-item-title">Technologies</h3>
@@ -108,12 +104,12 @@
                 <div class="container">
                     <h2 class="team-title">Our Team</h2>
                     <ul class="team-list">
-                        <ul class="team-item">
+                        <li class="team-item">
                             <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260">
                             <div class="teams">
                             <h3 class="team-subtitle">Mark Guerrero</h3>
                             <p class="team-text">Product Designer</p>
-                            </div>
+                            
                             <ul class="soc-icon-list"></ul>
 <li class="soc-icon-team">
     <a href="https://instagram.com" class="soc-icon">
@@ -144,6 +140,7 @@
         </a>
 </li>
 </ul>
+</div>
  
                         </li>
                         <li class="team-item">
