--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
     <!--Footer-->
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-conteiner">
             <a href="./index.html" class="footer-logo">Web<span class="span">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
                 growth solutions.</p>
