--- a/index.html
+++ b/index.html
@@ -49,55 +49,54 @@
             </div>
         </section>
 
-        <!--Section2 Values-->
-        <section class="section">
-            <div class="container">
-                <h2 class="visually-hidden">Values</h2>
-                <ul class="section-list">
-                    <li class="section-item">
-                     <div class="icon-section-container">
-                      <svg class="expertise-icon" width="64" height="64">
-        <symbol id="icon-antenna" viewBox="0 0 32 32">
-                       <use href="./images/icons.svg#icon-antenna"></use>
-                      </svg>
-                     </div>
-                        <h3 class="section-item-title">Strategy</h3>
-                        <p class="section-text">Our goal is to identify the business problem to walk away with the
-                            perfect and creative solution.</p>
-                    </li>
-                    <li class="section-item">
-                        <div class="icon-section-container">
-                            <svg class="expertise-icon" width="64" height="64">
-                                <use href="./images/icons.svg#icon-clock"></use>
-                            </svg>
-                        </div>
-                        <h3 class="section-item-title">Punctuality</h3>
-                        <p class="section-text">Bring the key message to the brand's audience for the best price within
-                            the shortest possible time.</p>
-                    </li>
-                    <li class="section-item">
-                        <div class="icon-section-container">
-                            <svg class="expertise-icon" width="64" height="64">
-                                <use href="./images/icons.svg#icon-diagram"></use>
-                            </svg>
-                        </div>
-                        <h3 class="section-item-title">Diligence</h3>
-                        <p class="section-text">Research and confirm brands that present the strongest digital growth
-                            opportunities and minimize risk.</p>
-                    </li>
-                    <li class="section-item">
-                        <div class="icon-section-container">
-                            <svg class="expertise-icon" width="64" height="64">
-                                <use href="./images/icons.svg#icon-astronaut"></use>
-                            </svg>
-                        </div>
-                        <h3 class="section-item-title">Technologies</h3>
-                        <p class="section-text">Design practice focused on digital experiences. We bring forth a deep
-                            passion for problem-solving.</p>
-                    </li>
-                </ul>
-            </div>
-            </section>
+<!--Section2 Values-->
+<section class="section">
+    <div class="container">
+        <h2 class="visually-hidden">Values</h2>
+        <ul class="section-list">
+            <li class="section-item">
+                <div class="icon-section-container">
+                    <svg class="expertise-icon" width="64" height="64">
+                        <use href="./images/icons.svg#icon-antenna"></use>
+                    </svg>
+                </div>
+                <h3 class="section-item-title">Strategy</h3>
+                <p class="section-text">Our goal is to identify the business problem to walk away with the perfect and
+                    creative solution.</p>
+            </li>
+            <li class="section-item">
+                <div class="icon-section-container">
+                    <svg class="expertise-icon" width="64" height="64">
+                        <use href="./images/icons.svg#icon-clock"></use>
+                    </svg>
+                </div>
+                <h3 class="section-item-title">Punctuality</h3>
+                <p class="section-text">Bring the key message to the brand's audience for the best price within the
+                    shortest possible time.</p>
+            </li>
+            <li class="section-item">
+                <div class="icon-section-container">
+                    <svg class="expertise-icon" width="64" height="64">
+                        <use href="./images/icons.svg#icon-diagram"></use>
+                    </svg>
+                </div>
+                <h3 class="section-item-title">Diligence</h3>
+                <p class="section-text">Research and confirm brands that present the strongest digital growth
+                    opportunities and minimize risk.</p>
+            </li>
+            <li class="section-item">
+                <div class="icon-section-container">
+                    <svg class="expertise-icon" width="64" height="64">
+                        <use href="./images/icons.svg#icon-astronaut"></use>
+                    </svg>
+                </div>
+                <h3 class="section-item-title">Technologies</h3>
+                <p class="section-text">Design practice focused on digital experiences. We bring forth a deep passion
+                    for problem-solving.</p>
+            </li>
+        </ul>
+    </div>
+</section>
 
             <!--Section3 Team-->
             <section class="team">
