--- a/index.html
+++ b/index.html
@@ -98,172 +98,162 @@
     </div>
 </section>
 
-            <!--Section3 Team-->
-            <section class="team">
-                <div class="container">
-                    <h2 class="team-title">Our Team</h2>
-                    <ul class="team-list">
-                        <li class="team-item">
-                            <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260">
-                            <div class="teams">
-                            <h3 class="team-subtitle">Mark Guerrero</h3>
-                            <p class="team-text">Product Designer</p> 
-                            <ul class="soc-icon-list"></ul>
-<li class="soc-icon-team">
-    <a href="https://instagram.com" class="soc-icon">
-        <svg class="media-icon" width="16" height="16">
-            <use href="./images/icons.svg#icon-instagram"></use>
-        </svg>
-    </a>
-    </li>
-    <li class="soc-icon-team">
-        <a href="https://twitter.com" class="soc-icon">
-            <svg class="media-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-twitter"></use>
-            </svg>
-        </a>
-    </li>
-    <li class="soc-icon-team">
-        <a href="https://facebook.com" class="soc-icon">
-            <svg class="media-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-facebook"></use>
-            </svg>
-        </a>
-    </li>
-    <li class="soc-icon-team">
-        <a href="https://linkedin.com" class="soc-icon">
-            <svg class="media-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-            </svg>
-        </a>
-</li>
-</ul>
-</div>
- 
+<!-- Section3 Team -->
+<section class="team">
+    <div class="container">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+            <li class="team-item">
+                <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260">
+                <div class="teams">
+                    <h3 class="team-subtitle">Mark Guerrero</h3>
+                    <p class="team-text">Product Designer</p>
+                    <ul class="soc-icon-list">
+                        <li class="soc-icon-team">
+                            <a href="https://instagram.com" class="soc-icon" style="width: 40px; height: 40px;">
+                                <svg class="media-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="team-item">
-                            <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260">
-                            <div class="teams">
-                            <h3 class="team-subtitle">Tom Ford</h3>
-                            <p class="team-text">Frontend Developer</p>
-<ul class="soc-icon-list"></ul>
-<li class="soc-icon-team">
-    <a href="https://instagram.com" class="soc-icon">
-        <svg class="media-icon" width="16" height="16">
-            <use href="./images/icons.svg#icon-instagram"></use>
-        </svg>
-    </a>
-</li>
-<li class="soc-icon-team">
-    <a href="https://twitter.com" class="soc-icon">
-        <svg class="media-icon" width="16" height="16">
-            <use href="./images/icons.svg#icon-twitter"></use>
-        </svg>
-    </a>
-</li>
-<li class="soc-icon-team">
-    <a href="https://facebook.com" class="soc-icon">
-        <svg class="media-icon" width="16" height="16">
-            <use href="./images/icons.svg#icon-facebook"></use>
-        </svg>
-    </a>
-</li>
-<li class="soc-icon-team">
-    <a href="https://linkedin.com" class="soc-icon">
-        <svg class="media-icon" width="16" height="16">
-            <use href="./images/icons.svg#icon-linkedin"></use>
-        </svg>
-    </a>
-</li>
-</ul>
-
-
-
-
-                            </div>
+                        <li class="soc-icon-team">
+                            <a href="https://twitter.com" class="soc-icon" style="width: 40px; height: 40px;">
+                                <svg class="media-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="team-item">
-                            <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260">
-                            <div class="teams">
-                            <h3 class="team-subtitle">Camila Garcia</h3>
-<ul class="soc-icon-list"></ul>
-<li class="soc-icon-team">
-    <a href="https://instagram.com" class="soc-icon">
-        <svg class="media-icon" width="16" height="16">
-            <use href="./images/icons.svg#icon-instagram"></use>
-        </svg>
-    </a>
-</li>
-<li class="soc-icon-team">
-    <a href="https://twitter.com" class="soc-icon">
-        <svg class="media-icon" width="16" height="16">
-            <use href="./images/icons.svg#icon-twitter"></use>
-        </svg>
-    </a>
-</li>
-<li class="soc-icon-team">
-    <a href="https://facebook.com" class="soc-icon">
-        <svg class="media-icon" width="16" height="16">
-            <use href="./images/icons.svg#icon-facebook"></use>
-        </svg>
-    </a>
-</li>
-<li class="soc-icon-team">
-    <a href="https://linkedin.com" class="soc-icon">
-        <svg class="media-icon" width="16" height="16">
-            <use href="./images/icons.svg#icon-linkedin"></use>
-        </svg>
-    </a>
-</li>
-</ul>                            <p class="team-text">Marketing</p>
-
-
-                        
-                            </div>
+                        <li class="soc-icon-team">
+                            <a href="https://facebook.com" class="soc-icon" style="width: 40px; height: 40px;">
+                                <svg class="media-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="team-item">
-                            <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260">
-                            <div class="teams">
-                            <h3 class="team-subtitle">Daniel Wilson</h3>
-                            <p class="team-text">UI Designer</p>
-<ul class="soc-icon-list"></ul>
-<li class="soc-icon-team">
-    <a href="https://instagram.com" class="soc-icon">
-        <svg class="media-icon" width="16" height="16">
-            <use href="./images/icons.svg#icon-instagram"></use>
-        </svg>
-    </a>
-</li>
-<li class="soc-icon-team">
-    <a href="https://twitter.com" class="soc-icon">
-        <svg class="media-icon" width="16" height="16">
-            <use href="./images/icons.svg#icon-twitter"></use>
-        </svg>
-    </a>
-</li>
-<li class="soc-icon-team">
-    <a href="https://facebook.com" class="soc-icon">
-        <svg class="media-icon" width="16" height="16">
-            <use href="./images/icons.svg#icon-facebook"></use>
-        </svg>
-    </a>
-</li>
-<li class="soc-icon-team">
-    <a href="https://linkedin.com" class="soc-icon">
-        <svg class="media-icon" width="16" height="16">
-            <use href="./images/icons.svg#icon-linkedin"></use>
-        </svg>
-    </a>
-</li>
-</ul>
-
-
-                        
-                            </div>
+                        <li class="soc-icon-team">
+                            <a href="https://linkedin.com" class="soc-icon" style="width: 40px; height: 40px;">
+                                <svg class="media-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
                 </div>
-            </section>
+            </li>
+            <li class="team-item">
+                <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260">
+                <div class="teams">
+                    <h3 class="team-subtitle">Tom Ford</h3>
+                    <p class="team-text">Frontend Developer</p>
+                    <ul class="soc-icon-list">
+                        <li class="soc-icon-team">
+                            <a href="https://instagram.com" class="soc-icon" style="width: 40px; height: 40px;">
+                                <svg class="media-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-icon-team">
+                            <a href="https://twitter.com" class="soc-icon" style="width: 40px; height: 40px;">
+                                <svg class="media-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-icon-team">
+                            <a href="https://facebook.com" class="soc-icon" style="width: 40px; height: 40px;">
+                                <svg class="media-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-icon-team">
+                            <a href="https://linkedin.com" class="soc-icon" style="width: 40px; height: 40px;">
+                                <svg class="media-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li class="team-item">
+                <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260">
+                <div class="teams">
+                    <h3 class="team-subtitle">Camila Garcia</h3>
+                    <p class="team-text">Marketing</p>
+                    <ul class="soc-icon-list">
+                        <li class="soc-icon-team">
+                            <a href="https://instagram.com" class="soc-icon" style="width: 40px; height: 40px;">
+                                <svg class="media-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-icon-team">
+                            <a href="https://twitter.com" class="soc-icon" style="width: 40px; height: 40px;">
+                                <svg class="media-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-icon-team">
+                            <a href="https://facebook.com" class="soc-icon" style="width: 40px; height: 40px;">
+                                <svg class="media-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-icon-team">
+                            <a href="https://linkedin.com" class="soc-icon" style="width: 40px; height: 40px;">
+                                <svg class="media-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li class="team-item">
+                <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260">
+                <div class="teams">
+                    <h3 class="team-subtitle">Daniel Wilson</h3>
+                    <p class="team-text">UI Designer</p>
+                    <ul class="soc-icon-list">
+                        <li class="soc-icon-team">
+                            <a href="https://instagram.com" class="soc-icon" style="width: 40px; height: 40px;">
+                                <svg class="media-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-icon-team">
+                            <a href="https://twitter.com" class="soc-icon" style="width: 40px; height: 40px;">
+                                <svg class="media-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-icon-team">
+                            <a href="https://facebook.com" class="soc-icon" style="width: 40px; height: 40px;">
+                                <svg class="media-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="soc-icon-team">
+                            <a href="https://linkedin.com" class="soc-icon" style="width: 40px; height: 40px;">
+                                <svg class="media-icon" width="16" height="16">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
 
             <!--Section4 Portfolio-->
             <section class="portfolio">
