--- a/index.html
+++ b/index.html
@@ -255,91 +255,102 @@
     </div>
 </section>
 
-            <!--Section4 Portfolio-->
-            <section class="portfolio">
-                <div class="container">
-                    <h2 class="portfolio-title">Our Portfolio</h2>
-                    <ul class="portfolio-list">
-                        <li class="portfolio-item">
-                            <img src="./images/banking.jpg" alt="banking app" width="360" height="300">
-                            <div class="portfolio-content">
-                                <h3 class="portfolio-subtitle">Banking App</h3>
-                                <p class="portfolio-text">App</p>
-                            </div>
-                        </li>
-                        <li class="portfolio-item">
-                            <img src="./images/payment.jpg" alt="payment" width="360" height="300">
-                            <div class="portfolio-content">
-                                <h3 class="portfolio-subtitle">Cashless Payment</h3>
-                                <p class="portfolio-text">Marketing</p>
-                            </div>
-                        </li>
-                        <li class="portfolio-item">
-                            <img src="./images/meditation.jpg" alt="meditation" width="360" height="300">
-                            <div class="portfolio-content">
-                                <h3 class="portfolio-subtitle">Meditation App</h3>
-                                <p class="portfolio-text">App</p>
-                            </div>
-                        </li>
-                        <li class="portfolio-item">
-                            <img src="./images/service.jpg" alt="service" width="360" height="300">
-                            <div class="portfolio-content">
-                                <h3 class="portfolio-subtitle">Taxi Service</h3>
-                                <p class="portfolio-text">Marketing</p>
-                            </div>
-                        </li>
-                        <li class="portfolio-item">
-                            <img src="./images/illustrations.jpg" alt="illustrations" width="360" height="300">
-                            <div class="portfolio-content">
-                                <h3 class="portfolio-subtitle">Screen Illustrations</h3>
-                                <p class="portfolio-text">Design</p>
-                            </div>
-                        </li>
-                        <li class="portfolio-item">
-                            <img src="./images/courses.jpg" alt="courses" width="360" height="300">
-                            <div class="portfolio-content">
-                                <h3 class="portfolio-subtitle">Online Courses</h3>
-                                <p class="portfolio-text">Marketing</p>
-                            </div>
-                        </li>
-                    </ul>
+<!-- Section4 Portfolio -->
+<section class="portfolio">
+    <div class="container">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+            <li class="portfolio-item">
+                <div class="portfolio-image-container">
+                    <img src="./images/banking.jpg" alt="banking app" width="360" height="300">
                 </div>
-            </section>
-    </main>
+                <div class="portfolio-content">
+                    <h3 class="portfolio-subtitle">Banking App</h3>
+                    <p class="portfolio-text">App</p>
+                </div>
+            </li>
+            <li class="portfolio-item">
+                <div class="portfolio-image-container">
+                    <img src="./images/payment.jpg" alt="payment" width="360" height="300">
+                </div>
+                <div class="portfolio-content">
+                    <h3 class="portfolio-subtitle">Cashless Payment</h3>
+                    <p class="portfolio-text">Marketing</p>
+                </div>
+            </li>
+            <li class="portfolio-item">
+                <div class="portfolio-image-container">
+                    <img src="./images/meditation.jpg" alt="meditation" width="360" height="300">
+                </div>
+                <div class="portfolio-content">
+                    <h3 class="portfolio-subtitle">Meditation App</h3>
+                    <p class="portfolio-text">App</p>
+                </div>
+            </li>
+            <li class="portfolio-item">
+                <div class="portfolio-image-container">
+                    <img src="./images/service.jpg" alt="service" width="360" height="300">
+                </div>
+                <div class="portfolio-content">
+                    <h3 class="portfolio-subtitle">Taxi Service</h3>
+                    <p class="portfolio-text">Marketing</p>
+                </div>
+            </li>
+            <li class="portfolio-item">
+                <div class="portfolio-image-container">
+                    <img src="./images/illustrations.jpg" alt="illustrations" width="360" height="300">
+                </div>
+                <div class="portfolio-content">
+                    <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+                    <p class="portfolio-text">Design</p>
+                </div>
+            </li>
+            <li class="portfolio-item">
+                <div class="portfolio-image-container">
+                    <img src="./images/courses.jpg" alt="courses" width="360" height="300">
+                </div>
+                <div class="portfolio-content">
+                    <h3 class="portfolio-subtitle">Online Courses</h3>
+                    <p class="portfolio-text">Marketing</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
 
-    <!--Footer-->
-    <footer class="footer">
-        <div class="container footer-conteiner">
-            <a href="./index.html" class="footer-logo">Web<span class="span">Studio</span></a>
-            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
-                growth solutions.</p>
-        </div>
+<!--Footer-->
+<footer class="footer">
+    <div class="container footer-container" style="display: flex; align-items: baseline; margin-right: 120px;">
+        <a href="./index.html" class="footer-logo">Web<span class="span">Studio</span></a>
+        <p class="footer-text" style="margin-bottom: 16px;">Increase the flow of customers and sales for your business
+            with digital marketing & growth solutions.</p>
+    </div>
     <div class="footer-social-contact">
         <p class="footer-list-title">Social media</p>
-        <ul class="footer-icon-list">
+        <ul class="footer-icon-list" style="display: flex; gap: 16px;">
             <li class="footer-social-item">
-                <a class="footer-social-link" href="https://www.instagram.com/" target="_blank">
+                <a class="footer-social-link social-media-link" href="https://www.instagram.com/" target="_blank">
                     <svg class="footer-media-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
             <li class="footer-social-item">
-                <a class="footer-social-link" href="https://twitter.com/" target="_blank">
+                <a class="footer-social-link social-media-link" href="https://twitter.com/" target="_blank">
                     <svg class="footer-media-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
             <li class="footer-social-item">
-                <a class="footer-social-link" href="https://www.facebook.com/" target="_blank">
+                <a class="footer-social-link social-media-link" href="https://www.facebook.com/" target="_blank">
                     <svg class="footer-media-icon" width="24" height="24">
-                        <use href="./images/icons.svg#icon-facebook "></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
             <li class="footer-social-item">
-                <a class="footer-social-link" href="https://ua.linkedin.com/" target="_blank">
+                <a class="footer-social-link social-media-link" href="https://ua.linkedin.com/" target="_blank">
                     <svg class="footer-media-icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
@@ -347,6 +358,7 @@
             </li>
         </ul>
     </div>
-    </footer>
+</footer>
+
 </body>
 </html>
