--- a/index.html
+++ b/index.html
@@ -322,6 +322,7 @@
 <!-- Footer -->
 <footer class="footer">
     <div class="footer-container">
+        <div class="footer-logo-text">
         <a href="./index.html" class="footer-logo">Web<span class="span">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
@@ -358,6 +359,8 @@
                 </a>
             </li>
         </ul>
+        </div>
+
     </div>
 </footer>
 
