--- a/index.html
+++ b/index.html
@@ -264,6 +264,8 @@
             <li class="portfolio-item">
                 <div class="portfolio-image-container">
                     <img src="./images/banking.jpg" alt="banking app" width="360" height="300">
+                    <p class="portfolio-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                        · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="portfolio-content">
                     <h3 class="portfolio-subtitle">Banking App</h3>
@@ -273,6 +275,8 @@
             <li class="portfolio-item">
                 <div class="portfolio-image-container">
                     <img src="./images/payment.jpg" alt="payment" width="360" height="300">
+                    <p class="portfolio-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                        · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="portfolio-content">
                     <h3 class="portfolio-subtitle">Cashless Payment</h3>
@@ -282,6 +286,8 @@
             <li class="portfolio-item">
                 <div class="portfolio-image-container">
                     <img src="./images/meditation.jpg" alt="meditation" width="360" height="300">
+                    <p class="portfolio-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                        · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="portfolio-content">
                     <h3 class="portfolio-subtitle">Meditation App</h3>
@@ -291,6 +297,8 @@
             <li class="portfolio-item">
                 <div class="portfolio-image-container">
                     <img src="./images/service.jpg" alt="service" width="360" height="300">
+                    <p class="portfolio-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                        · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="portfolio-content">
                     <h3 class="portfolio-subtitle">Taxi Service</h3>
@@ -300,6 +308,8 @@
             <li class="portfolio-item">
                 <div class="portfolio-image-container">
                     <img src="./images/illustrations.jpg" alt="illustrations" width="360" height="300">
+                    <p class="portfolio-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                        · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="portfolio-content">
                     <h3 class="portfolio-subtitle">Screen Illustrations</h3>
@@ -309,6 +319,8 @@
             <li class="portfolio-item">
                 <div class="portfolio-image-container">
                     <img src="./images/courses.jpg" alt="courses" width="360" height="300">
+                    <p class="portfolio-description">14 Stylish and User-Friendly App Design Concepts · Task Manager App
+                        · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>
                 <div class="portfolio-content">
                     <h3 class="portfolio-subtitle">Online Courses</h3>
@@ -318,6 +330,7 @@
         </ul>
     </div>
 </section>
+
 
 <!-- Footer -->
 <footer class="footer">
