--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <div class="footer-container">
+            <div class="container footer-container">
                 <div class="footer-logo-text">
                     <a href="./index.html" class="footer-logo">Web<span class="span">Studio</span></a>
                     <p class="footer-text">Increase the flow of customers and sales for your business with digital
